welcome.lessons.welcome.array.occurenceofvalue.OccurrenceOfValue.scala.error
occurrences:18: error: type mismatch;
 found   : Unit
 required: Int
}
^